--- a/src/components/Forecast/Forecast.css
+++ b/src/components/Forecast/Forecast.css
@@ -1,4 +1,5 @@
 .title {
+  margin: 10px;
   font-size: 23px;
   font-weight: 700;
 }
@@ -55,9 +56,11 @@
 }
 
 .dailyDetailsGridItem label:first-child {
-  color: #5d5d5d;
+  color: #535353;
+  font-weight: 600;
 }
 
 .dailyDetailsGridItem label:last-child {
   color: #212121;
+  font-weight: 500;
 }
